--- a/views/admin/layout/adfooter.ejs
+++ b/views/admin/layout/adfooter.ejs
@@ -15,6 +15,8 @@
     <script src="/admin_assets/js/misc.js"></script>
     <script src="/admin_assets/js/settings.js"></script>
     <script src="/admin_assets/js/todolist.js"></script>
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.js"></script>
     <!-- end -->
 
 
