--- a/views/admin/layout/adheader.ejs
+++ b/views/admin/layout/adheader.ejs
@@ -21,5 +21,9 @@
     <link rel="stylesheet" href="/admin_assets/css/style.css">
     <!-- End layout styles -->
     <link rel="shortcut icon" href="/admin_assets/images/favicon.png" />
+
+    <!--Cropper cdn-->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.css" rel="stylesheet">
+    
   </head>
   <body>
