--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -1202,7 +1202,7 @@
                     </div><!-- .End .tab-pane -->
                 </div><!-- End .tab-content -->
                 <div class="more-container text-center">
-                    <a href="#" class="btn btn-outline-darker btn-more"><span>View All products</span><i class="icon-long-arrow-up"></i></a>
+                    <a href="/allproducts" class="btn btn-outline-darker btn-more"><span>View All products</span><i class="icon-long-arrow-up"></i></a>
                 </div><!-- End .more-container -->
             </div><!-- End .container -->
 
