--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -12,23 +12,23 @@
     <meta name="description" content="Molla - Bootstrap eCommerce Template">
     <meta name="author" content="p-themes">
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/icons/FurniHub_icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/icons/FurniHub_icon.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/icons/FurniHub_icon.png">
-    <link rel="manifest" href="assets/images/icons/site.html">
-    <link rel="mask-icon" href="assets/images/icons/FurniHub_icon.png" color="#666666">
-    <link rel="shortcut icon" href="assets/images/icons/FurniHub_icon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/icons/FurniHub_icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/icons/FurniHub_icon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/icons/FurniHub_icon.png">
+    <link rel="manifest" href="/assets/images/icons/site.html">
+    <link rel="mask-icon" href="/assets/images/icons/FurniHub_icon.png" color="#666666">
+    <link rel="shortcut icon" href="/assets/images/icons/FurniHub_icon.png">
     <meta name="apple-mobile-web-app-title" content="Molla">
     <meta name="application-name" content="Molla">
     <meta name="msapplication-TileColor" content="#cc9966">
-    <meta name="msapplication-config" content="assets/images/icons/browserconfig.xml">
+    <meta name="msapplication-config" content="/assets/images/icons/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
     <!-- Plugins CSS File -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/plugins/owl-carousel/owl.carousel.css">
-    <link rel="stylesheet" href="assets/css/plugins/magnific-popup/magnific-popup.css">
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/plugins/owl-carousel/owl.carousel.css">
+    <link rel="stylesheet" href="/assets/css/plugins/magnific-popup/magnific-popup.css">
     <!-- Main CSS File -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
