--- a/views/layout/navbar.ejs
+++ b/views/layout/navbar.ejs
@@ -41,7 +41,7 @@
                     </button>
 
                     <a href="index.html" class="logo">
-                        <img src="assets/images/logo.png" alt="FurniHub Logo" width="105" height="25">
+                        <img src="/assets/images/logo.png" alt="FurniHub Logo" width="105" height="25">
                     </a>
 
                     <nav class="main-nav">
