--- a/views/users/allproducts.ejs
+++ b/views/users/allproducts.ejs
@@ -68,7 +68,7 @@
                                         </figure><!-- End .product-media -->
                                         <div class="product-body">
                                             <div class="product-cat">
-                                                <!-- <a href="#">hhhhhhhh</a> -->
+                                                <a href="#"><%= product.category.name %></a>
                                             </div><!-- End .product-cat -->
                                             <h3 class="product-title"><a href="product.html"><%= product.name %></a></h3><!-- End .product-title -->
                                             <div class="product-price">₹
