--- a/views/layout/navbar.ejs
+++ b/views/layout/navbar.ejs
@@ -40,7 +40,7 @@
                         <i class="icon-bars"></i>
                     </button>
 
-                    <a href="index.html" class="logo">
+                    <a href="" class="logo">
                         <img src="/assets/images/logo.png" alt="FurniHub Logo" width="105" height="25">
                     </a>
 
